# Hospital-Management-System

./: init_mongodb.js
backend/: CMakeLists.txt  main.cpp
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  Auth.css  Dashboard.css
frontend/src/components/: AdminDashboard.js  DoctorDashboard.js  Login.js  PatientDashboard.js  ReceptionistDashboard.js  Register.js
